Uploaded image for project: 'Apache NiFi MiNiFi C++'
  1. Apache NiFi MiNiFi C++
  2. MINIFICPP-1392

Some streams error when writing no data with zero length

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • None
    • None
    • None

    Description

      Some streams, RocksDBStream, HTTPStream, FileStream, ... all return error (-1) when writing no data with zero length. No data here means that the pointer to data is nullptr or otherwise invalid, but since the length parameter is zero, the streams should not be concerned about the validity of the data pointer.

      Attachments

        Activity

          People

            adebreceni Adam Debreceni
            adebreceni Adam Debreceni
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0h
                0h
                Logged:
                Time Spent - 20m
                20m