MINIFICPP-1392 - Fix and test streams reading/writing zero-length data

Signed-off-by: Arpad Boda <aboda@apache.org>

This closes #927